--- a/testbed/card.css
+++ b/testbed/card.css
@@ -7,24 +7,32 @@
     --typeline-font-size: 8pt;
     --typeline-font-adjustment: 0mm;
 
-    --rules-font-family: Noto Sans;
-    --rules-font-size: 7pt;
-    --rules-font-size-small: 6pt;
-    --rules-font-size-large: 8pt;
+    --rules-font-family: Crimson Text;
+    --rules-font-size: 8pt;
+    --rules-font-size-small: 7pt;
+    --rules-font-size-large: 9pt;
 
-    --flavor-font-family: Noto Sans;
-    --flavor-font-size: 7.5pt;
-    --flavor-font-size-small: 6pt;
-    --flavor-font-size-large: 8pt;
+    --flavor-font-family: Crimson Text;
+    --flavor-font-size: 8pt;
+    --flavor-font-size-small: 7pt;
+    --flavor-font-size-large: 9pt;
 
-    --corner-bubble-font-family: Serif;
+    --corner-bubble-font-family: Crimson Text;
     --corner-bubble-font-size: 11pt;
-    --corner-bubble-font-adjustment: -0.5mm;
+    --corner-bubble-font-adjustment: 0mm;
 
     --flip-indicator-font-family: Amarante;
     --flip-indicator-font-size: 6pt;
-    --flip-indicator-font-adjustment: 0.3mm;
-    --flip-indicator-height: 3mm;
+    --flip-indicator-font-adjustment: -0.1mm;
+
+    --art-credit-font: Crimson Text;
+    --art-credit-font-size: 6pt;
+
+    --proxy-mark-font: Inconsolata;
+    --proxy-mark-font-size: 1.5mm;
+    --proxy-mark-nudge: 0.2mm;
+
+    /* CARD DIMENSIONS */
 
     --card-width: 63.5mm;
     --card-height: 88mm;
@@ -38,27 +46,17 @@
     --fullheight-box: 69mm;
 
     --art-height: 40mm;
-
     --bar-height: 5mm;
     --bar-endcap: 1mm;
 
-    --proxy-mark-font-size: 1.2mm;
-    --proxy-mark-nudge: 0.2mm;
-}
+    --flip-indicator-height: 3mm;
 
-:root {
     --content-width: calc(var(--card-width) - 2*var(--card-border));
-
     --content-height: calc(var(--card-height) - 2*var(--card-border));
-
     --text-box-height: calc(var(--fullheight-box) - var(--art-height));
-
     --fullwidth-margin: calc((var(--content-width) - var(--fullwidth-box))/2);
-
     --halfwidth-box: calc(var(--fullwidth-box)/2);
-
     --bar-width: calc(var(--fullwidth-box) + 2*var(--bar-endcap));
-
     --bar-margin: calc((var(--content-width) - var(--bar-width))/2);
 }
 
@@ -90,7 +88,7 @@ div.card>* {
 div.card::before,
 div.card::after {
     position: absolute;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: var(--proxy-mark-font);
     font-weight: bold;
     font-size: var(--proxy-mark-font-size);
     color: white;
@@ -278,26 +276,21 @@ div.title.bar {
     font-size: var(--title-font-size);
 }
 
-div.title.bar.obverse {
+div.title.bar.obverse,
+div.title.bar.reverse {
     padding-left: var(--bar-height);
 }
 
-div.title.bar.obverse::before {
+div.title.bar.obverse::before,
+div.title.bar.reverse::before {
     position: absolute;
     font-size: 85%;
     content: "▲";
-    left: 1mm;
+    left: 1.5mm;
 }
 
-div.title.bar.reverse {
-    padding-right: var(--bar-height);
-}
-
-div.title.bar.reverse::after {
-    position: absolute;
-    font-size: 85%;
+div.title.bar.reverse::before {
     content: "▼";
-    right: 1mm;
 }
 
 div.type-line.bar {
@@ -379,11 +372,11 @@ img.art.vertical.right {
 
 div.text-box>hr {
     width: 90%;
-    margin: 0mm auto;
+    margin: 1mm auto 0mm;
 }
 
 div.text-box {
-    padding: 1mm 0;
+    padding: 0;
     display: flex;
     flex-direction: column;
     justify-content: start;
@@ -394,12 +387,16 @@ div.text-box>p {
 }
 
 div.text-box.dense>p {
-    margin: 1mm;
+    margin: 1mm 1mm 0mm;
+}
+
+div.text-box.sparse {
+    justify-content: center;
 }
 
 div.text-box.sparse>p {
+    margin: -2mm 0 0;
     text-align: center;
-    justify-content: center;
 }
 
 div.text-box.dense {
@@ -512,9 +509,9 @@ span.art-credits {
     bottom: calc(var(--upper-margin)/2);
     width: 100%;
     text-align: center;
-    font-size: 5pt;
+    font-size: var(--art-credit-font-size);
     font-weight: bold;
-    font-family: Maxtrix;
+    font-family: var(--art-credit-font);
     background-color: transparent;
     border-width: 0;
     border-color: transparent;
