--- a/css/card.css
+++ b/css/card.css
@@ -44,150 +44,7 @@ div.card::before {
     top: calc(-1*var(--card-corner-radius) + var(--card-border)/2 + var(--proxy-mark-nudge));
 }
 
-/* COLOR INDICATOR - COLORLESS AND MONO */
-
-div.card::before {
-    content: "C"
-}
-
-div.card.white::before {
-    content: "W";
-}
-
-div.card.blue::before {
-    content: "U";
-}
-
-div.card.black::before {
-    content: "B";
-}
-
-div.card.red::before {
-    content: "R";
-}
-
-div.card.green::before {
-    content: "G";
-}
-
-/* COLOR INDICATOR - ALLIED GUILDS */
-
-div.card.white.blue::before {
-    content: "WU";
-}
-
-div.card.blue.black::before {
-    content: "UB";
-}
-
-div.card.black.red::before {
-    content: "BR";
-}
-
-div.card.red.green::before {
-    content: "RG";
-}
-
-div.card.green.white::before {
-    content: "WG";
-}
-
-/* COLOR INDICATOR - OPPOSING GUILDS */
-
-div.card.white.black::before {
-    content: "WB";
-}
-
-div.card.blue.red::before {
-    content: "UR";
-}
-
-div.card.black.green::before {
-    content: "BG";
-}
-
-div.card.red.white::before {
-    content: "WR";
-}
-
-div.card.green.blue::before {
-    content: "UG";
-}
-
-/* COLOR INDICATOR - SHARDS */
-
-div.card.white.blue.black::before {
-    content: "WUB";
-}
-
-div.card.blue.black.red::before {
-    content: "UBR";
-}
-
-div.card.black.red.green::before {
-    content: "BRG";
-}
-
-div.card.red.green.white::before {
-    content: "WRG";
-}
-
-div.card.green.white.blue::before {
-    content: "WUG";
-}
-
-/* COLOR INDICATOR - CLANS */
-
-div.card.white.blue.red::before {
-    content: "WUR";
-}
-
-div.card.blue.black.green::before {
-    content: "UBG";
-}
-
-div.card.black.red.white::before {
-    content: "WBR";
-}
-
-div.card.red.green.blue::before {
-    content: "URG";
-}
-
-div.card.green.white.black::before {
-    content: "WBG";
-}
-
-/* COLOR INDICATOR - SANS AND WUBRG */
-
-div.card.white.blue.black.red::before {
-    content: "WUBR";
-}
-
-div.card.blue.black.red.green::before {
-    content: "UBRG";
-}
-
-div.card.black.red.green.white::before {
-    content: "WBRG";
-}
-
-div.card.red.green.white.blue::before {
-    content: "WURG";
-}
-
-div.card.green.white.blue.black::before {
-    content: "WUBG";
-}
-
-div.card.white.blue.black.red.green::before {
-    content: "WUBRG";
-}
-
-div.card.colorless::before {
-    content: "C"
-}
-
+/
 /* CARD PARTS */
 
 div.bar {
@@ -209,6 +66,10 @@ div.bar::after {
     align-self: center;
     font-weight: bold;
     margin-top: var(--title-font-adjustment);
+}
+
+div.title.bar>span.cost {
+    margin-top: var(--mana-cost-adjustment);
 }
 
 div.title.bar {
@@ -454,188 +315,10 @@ span.art-credits {
     border-width: 0;
     border-color: transparent;
     border-style: none;
-}
-
-span.art-credits::before {
-    content: "artist: "
-}
-
-
-
-div.card {
-    background: linear-gradient(to top, var(--colorless-2), var(--colorless-1));
-}
-
-div.card.red {
-    background: linear-gradient(to top, var(--red-color-2), var(--red-color-1));
-}
-
-div.card.blue {
-    background: linear-gradient(to top, var(--blue-color-2), var(--blue-color-1));
-}
-
-div.card.green {
-    background: linear-gradient(to top, var(--green-color-2), var(--green-color-1));
-}
-
-div.card.black {
-    background: linear-gradient(to top, var(--black-color-2), var(--black-color-1));
-}
-
-div.card.white {
-    background: linear-gradient(to top, var(--white-color-2), var(--white-color-1));
-}
-
-div.card.white.blue {
-    background:
-        radial-gradient(ellipse at top left, var(--white-color-1), transparent 75% 75%),
-        radial-gradient(ellipse at top right, var(--blue-color-1), transparent 75% 75%),
-        radial-gradient(ellipse at bottom left, var(--white-color-2), transparent 75% 75%),
-        radial-gradient(ellipse at bottom right, var(--blue-color-2), transparent 75% 75%);
-}
-
-div.card.white.black {
-    background:
-        radial-gradient(ellipse at top left, var(--white-color-1), transparent 75% 75%),
-        radial-gradient(ellipse at top right, var(--black-color-1), transparent 75% 75%),
-        radial-gradient(ellipse at bottom left, var(--white-color-2), transparent 75% 75%),
-        radial-gradient(ellipse at bottom right, var(--black-color-2), transparent 75% 75%);
-}
-
-div.card.white.red {
-    background:
-        radial-gradient(ellipse at top left, var(--white-color-1), transparent 75% 75%),
-        radial-gradient(ellipse at top right, var(--red-color-1), transparent 75% 75%),
-        radial-gradient(ellipse at bottom left, var(--white-color-2), transparent 75% 75%),
-        radial-gradient(ellipse at bottom right, var(--red-color-2), transparent 75% 75%);
-}
-
-div.card.white.green {
-    background:
-        radial-gradient(ellipse at top left, var(--white-color-1), transparent 75% 75%),
-        radial-gradient(ellipse at top right, var(--green-color-1), transparent 75% 75%),
-        radial-gradient(ellipse at bottom left, var(--white-color-2), transparent 75% 75%),
-        radial-gradient(ellipse at bottom right, var(--green-color-2), transparent 75% 75%);
-}
-
-div.card.blue.black {
-    background:
-        radial-gradient(ellipse at top left, var(--blue-color-1), transparent 75% 75%),
-        radial-gradient(ellipse at top right, var(--black-color-1), transparent 75% 75%),
-        radial-gradient(ellipse at bottom left, var(--blue-color-2), transparent 75% 75%),
-        radial-gradient(ellipse at bottom right, var(--black-color-2), transparent 75% 75%);
-}
-
-div.card.blue.red {
-    background:
-        radial-gradient(ellipse at top left, var(--blue-color-1), transparent 75% 75%),
-        radial-gradient(ellipse at top right, var(--red-color-1), transparent 75% 75%),
-        radial-gradient(ellipse at bottom left, var(--blue-color-2), transparent 75% 75%),
-        radial-gradient(ellipse at bottom right, var(--red-color-2), transparent 75% 75%);
-}
-
-div.card.blue.green {
-    background:
-        radial-gradient(ellipse at top left, var(--blue-color-1), transparent 75% 75%),
-        radial-gradient(ellipse at top right, var(--green-color-1), transparent 75% 75%),
-        radial-gradient(ellipse at bottom left, var(--blue-color-2), transparent 75% 75%),
-        radial-gradient(ellipse at bottom right, var(--green-color-2), transparent 75% 75%);
-}
-
-
-div.card.blue.red {
-    background:
-        radial-gradient(ellipse at top left, var(--blue-color-1), transparent 75% 75%),
-        radial-gradient(ellipse at top right, var(--red-color-1), transparent 75% 75%),
-        radial-gradient(ellipse at bottom left, var(--blue-color-2), transparent 75% 75%),
-        radial-gradient(ellipse at bottom right, var(--red-color-2), transparent 75% 75%);
-}
-
-div.card.black.red {
-    background:
-        radial-gradient(ellipse at top left, var(--black-color-1), transparent 75% 75%),
-        radial-gradient(ellipse at top right, var(--red-color-1), transparent 75% 75%),
-        radial-gradient(ellipse at bottom left, var(--black-color-2), transparent 75% 75%),
-        radial-gradient(ellipse at bottom right, var(--red-color-2), transparent 75% 75%);
-}
-
-div.card.black.green {
-    background:
-        radial-gradient(ellipse at top left, var(--black-color-1), transparent 75% 75%),
-        radial-gradient(ellipse at top right, var(--green-color-1), transparent 75% 75%),
-        radial-gradient(ellipse at bottom left, var(--black-color-2), transparent 75% 75%),
-        radial-gradient(ellipse at bottom right, var(--green-color-2), transparent 75% 75%);
-}
-
-div.card.red.green {
-    background:
-        radial-gradient(ellipse at top left, var(--red-color-1), transparent 75% 75%),
-        radial-gradient(ellipse at top right, var(--green-color-1), transparent 75% 75%),
-        radial-gradient(ellipse at bottom left, var(--red-color-2), transparent 75% 75%),
-        radial-gradient(ellipse at bottom right, var(--green-color-2), transparent 75% 75%);
-}
-
-div.card.white.blue.black,
-div.card.white.blue.red,
-div.card.white.blue.green,
-div.card.white.black.red,
-div.card.white.black.green,
-div.card.white.red.green,
-div.card.blue.black.red,
-div.card.blue.black.green,
-div.card.blue.red.green,
-div.card.black.red.green,
-div.card.white.blue.red.green,
-div.card.white.black.red.green,
-div.card.white.blue.black.green,
-div.card.white.blue.black.red,
-div.card.white.blue.black.red.green {
-    background:
-        linear-gradient(-30deg, transparent 40%, white 50%, transparent 60%),
-        radial-gradient(ellipse at top left, var(--gold-1), transparent 75% 75%),
-        radial-gradient(ellipse at top right, var(--gold-2), transparent 75% 75%),
-        radial-gradient(ellipse at bottom left, var(--gold-1), transparent 75% 75%),
-        radial-gradient(ellipse at bottom right, var(--gold-2), transparent 75% 75%);
-
-}
-
-div.card>span.art-credits {
     color: white;
     text-shadow: 0 0 1pt black, 0 0 1pt black, 0 0 1pt black, 0 0 1pt black;
 }
 
-/* MANA MODIFICATION */
-
-span.mi,
-i.mi {
-    font-size: var(--mana-symbol-size);
-}
-
-span.mi-lg,
-i.mi-lg {
-    font-size: calc(1.33333333 * var(--mana-symbol-size));
-}
-
-span.mi-2x,
-i.mi-2x {
-    font-size: calc(2 * var(--mana-symbol-size));
-}
-
-span.mi-3x,
-i.mi-3x {
-    font-size: calc(3 * var(--mana-symbol-size));
-}
-
-span.mi-4x,
-i.mi-4x {
-    font-size: calc(4 * var(--mana-symbol-size));
-}
-
-span.mi-5x,
-i.mi-5x {
-    font-size: calc(5 * var(--mana-symbol-size));
-}
-
-div.title.bar>span.cost {
-    margin-top: var(--mana-cost-adjustment);
+span.art-credits::before {
+    content: "artist: "
 }
