--- a/css/colors.css
+++ b/css/colors.css
@@ -23,6 +23,7 @@
 }
 
 /* COLOR INDICATOR - COLORLESS AND MONO */
+
 div.card::before {
     content: "C"
 }
@@ -163,4 +164,141 @@ div.card.white.blue.black.red.green::before {
 
 div.card.colorless::before {
     content: "C"
+}
+
+div.card {
+    background: linear-gradient(to top, var(--colorless-2), var(--colorless-1));
+}
+
+div.card.red {
+    background: linear-gradient(to top, var(--red-color-2), var(--red-color-1));
+}
+
+div.card.blue {
+    background: linear-gradient(to top, var(--blue-color-2), var(--blue-color-1));
+}
+
+div.card.green {
+    background: linear-gradient(to top, var(--green-color-2), var(--green-color-1));
+}
+
+div.card.black {
+    background: linear-gradient(to top, var(--black-color-2), var(--black-color-1));
+}
+
+div.card.white {
+    background: linear-gradient(to top, var(--white-color-2), var(--white-color-1));
+}
+
+div.card.white.blue {
+    background:
+        radial-gradient(ellipse at top left, var(--white-color-1), transparent 75% 75%),
+        radial-gradient(ellipse at top right, var(--blue-color-1), transparent 75% 75%),
+        radial-gradient(ellipse at bottom left, var(--white-color-2), transparent 75% 75%),
+        radial-gradient(ellipse at bottom right, var(--blue-color-2), transparent 75% 75%);
+}
+
+div.card.white.black {
+    background:
+        radial-gradient(ellipse at top left, var(--white-color-1), transparent 75% 75%),
+        radial-gradient(ellipse at top right, var(--black-color-1), transparent 75% 75%),
+        radial-gradient(ellipse at bottom left, var(--white-color-2), transparent 75% 75%),
+        radial-gradient(ellipse at bottom right, var(--black-color-2), transparent 75% 75%);
+}
+
+div.card.white.red {
+    background:
+        radial-gradient(ellipse at top left, var(--white-color-1), transparent 75% 75%),
+        radial-gradient(ellipse at top right, var(--red-color-1), transparent 75% 75%),
+        radial-gradient(ellipse at bottom left, var(--white-color-2), transparent 75% 75%),
+        radial-gradient(ellipse at bottom right, var(--red-color-2), transparent 75% 75%);
+}
+
+div.card.white.green {
+    background:
+        radial-gradient(ellipse at top left, var(--white-color-1), transparent 75% 75%),
+        radial-gradient(ellipse at top right, var(--green-color-1), transparent 75% 75%),
+        radial-gradient(ellipse at bottom left, var(--white-color-2), transparent 75% 75%),
+        radial-gradient(ellipse at bottom right, var(--green-color-2), transparent 75% 75%);
+}
+
+div.card.blue.black {
+    background:
+        radial-gradient(ellipse at top left, var(--blue-color-1), transparent 75% 75%),
+        radial-gradient(ellipse at top right, var(--black-color-1), transparent 75% 75%),
+        radial-gradient(ellipse at bottom left, var(--blue-color-2), transparent 75% 75%),
+        radial-gradient(ellipse at bottom right, var(--black-color-2), transparent 75% 75%);
+}
+
+div.card.blue.red {
+    background:
+        radial-gradient(ellipse at top left, var(--blue-color-1), transparent 75% 75%),
+        radial-gradient(ellipse at top right, var(--red-color-1), transparent 75% 75%),
+        radial-gradient(ellipse at bottom left, var(--blue-color-2), transparent 75% 75%),
+        radial-gradient(ellipse at bottom right, var(--red-color-2), transparent 75% 75%);
+}
+
+div.card.blue.green {
+    background:
+        radial-gradient(ellipse at top left, var(--blue-color-1), transparent 75% 75%),
+        radial-gradient(ellipse at top right, var(--green-color-1), transparent 75% 75%),
+        radial-gradient(ellipse at bottom left, var(--blue-color-2), transparent 75% 75%),
+        radial-gradient(ellipse at bottom right, var(--green-color-2), transparent 75% 75%);
+}
+
+
+div.card.blue.red {
+    background:
+        radial-gradient(ellipse at top left, var(--blue-color-1), transparent 75% 75%),
+        radial-gradient(ellipse at top right, var(--red-color-1), transparent 75% 75%),
+        radial-gradient(ellipse at bottom left, var(--blue-color-2), transparent 75% 75%),
+        radial-gradient(ellipse at bottom right, var(--red-color-2), transparent 75% 75%);
+}
+
+div.card.black.red {
+    background:
+        radial-gradient(ellipse at top left, var(--black-color-1), transparent 75% 75%),
+        radial-gradient(ellipse at top right, var(--red-color-1), transparent 75% 75%),
+        radial-gradient(ellipse at bottom left, var(--black-color-2), transparent 75% 75%),
+        radial-gradient(ellipse at bottom right, var(--red-color-2), transparent 75% 75%);
+}
+
+div.card.black.green {
+    background:
+        radial-gradient(ellipse at top left, var(--black-color-1), transparent 75% 75%),
+        radial-gradient(ellipse at top right, var(--green-color-1), transparent 75% 75%),
+        radial-gradient(ellipse at bottom left, var(--black-color-2), transparent 75% 75%),
+        radial-gradient(ellipse at bottom right, var(--green-color-2), transparent 75% 75%);
+}
+
+div.card.red.green {
+    background:
+        radial-gradient(ellipse at top left, var(--red-color-1), transparent 75% 75%),
+        radial-gradient(ellipse at top right, var(--green-color-1), transparent 75% 75%),
+        radial-gradient(ellipse at bottom left, var(--red-color-2), transparent 75% 75%),
+        radial-gradient(ellipse at bottom right, var(--green-color-2), transparent 75% 75%);
+}
+
+div.card.white.blue.black,
+div.card.white.blue.red,
+div.card.white.blue.green,
+div.card.white.black.red,
+div.card.white.black.green,
+div.card.white.red.green,
+div.card.blue.black.red,
+div.card.blue.black.green,
+div.card.blue.red.green,
+div.card.black.red.green,
+div.card.white.blue.red.green,
+div.card.white.black.red.green,
+div.card.white.blue.black.green,
+div.card.white.blue.black.red,
+div.card.white.blue.black.red.green {
+    background:
+        linear-gradient(-30deg, transparent 40%, white 50%, transparent 60%),
+        radial-gradient(ellipse at top left, var(--gold-1), transparent 75% 75%),
+        radial-gradient(ellipse at top right, var(--gold-2), transparent 75% 75%),
+        radial-gradient(ellipse at bottom left, var(--gold-1), transparent 75% 75%),
+        radial-gradient(ellipse at bottom right, var(--gold-2), transparent 75% 75%);
+
 }
